# autonomy-stack

./: .gitignore  environment.yml  flake.nix  flake2.nix  main.py  pyproject.toml  requirements.txt  web_server.py
pkgs/cuda-python/: flake.nix
pkgs/flox/: flake.nix
pkgs/nvidia-drivers/: flake.nix
src/hello-world/: package.xml  setup.cfg  setup.py
src/hello-world/hello-world/: node_1.py
