[project]
name = "autonomy-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.2",
    "cuda-bindings==13.2.0",
    "cuda-pathfinder==1.5.3",
    "cuda-toolkit==13.0.2",
    "filelock==3.29.0",
    "flask==3.1.3",
    "foxglove-sdk==0.22.0",
    "fsspec==2026.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "nvidia-cublas==13.1.0.3",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cudnn-cu13==9.19.0.56",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparselt-cu13==0.8.0",
    "nvidia-nccl-cu13==2.28.9",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "opencv-python==4.13.0.92",
    "packaging==26.0",
    "pandas>=3.0.2",
    "pygame==2.6.1",
    "setuptools==81.0.0",
    "sympy==1.14.0",
    "torch==2.11.0",
    "triton==3.6.0",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.8",
    "wheel==0.46.3",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version = "0.0.1"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv.sources]
carla = { path = "carla-0.9.16-cp312-cp312-manylinux_2_31_x86_64.whl" }
